# BetterMouseYoke

./: BetterMouseYoke.cpp  CMakeLists.txt  README.md
.github/workflows/: build.yml
